Added easy_split.py that uses training on known split compounds. CharSplit version is commented out but ideally both versions should be selectable

--- a/lextools/default.ini
+++ b/lextools/default.ini
@@ -1,5 +1,12 @@
+[app]
+host = 127.0.0.1
+port = 8001
+
 [splitter]
 title = Compound splitter
 description = "Webservice for compound splitter"
 prob_file = C:\Users\natha\Documents\lextools\lextools\data\da_ngram_probs.json
 word_file = C:\Users\natha\Documents\lextools\lextools\data\uniq_lemma_ddo.csv
+
+[easy_split]
+data_file = data/compounds.txt
