Renamed easy_split to brute_split; re-activated charsplit version; made it selectable which version to use: careful, brute or mixed, added two variants to brute_split

--- a/lextools/default.ini
+++ b/lextools/default.ini
@@ -5,8 +5,21 @@ port = 8001
 [splitter]
 title = Compound splitter
 description = "Webservice for compound splitter"
-prob_file = C:\Users\natha\Documents\lextools\lextools\data\da_ngram_probs.json
-word_file = C:\Users\natha\Documents\lextools\lextools\data\uniq_lemma_ddo.csv
+#prob_file = data\da_ngram_probs.json
+word_file = data/uniq_lemma_ddo.csv
 
-[easy_split]
-data_file = data/compounds.txt
+[careful]
+
+[brute]
+variants = nudansk,yngrenydansk
+description = Brute method assumes that the word is a compound and attempts to find the most likely split. Brute method does not handle the joint element (fugeelement) reliably.
+
+
+[brute_nudansk]
+data_files = data/compounds_ddo.txt:,data/compounds_ods.txt:modernize_danish
+
+[brute_yngrenydansk]
+data_files = data/compounds_ods.txt:
+
+[brute_modernize_danish]
+replacements = aa:å,ée:e
