Activated dsl's fork of fastapi_simple_security, set ENABLE_SECURITY to TRUE/FALSE

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp
-#fastapi
-fastapi_simple_security~=1.2.0
+git+https://github.com/dsldk/fastapi_simple_security.git
+#fastapi_simple_security~=1.2.0
 pandas
 pytest
 pytest-asyncio
