Added secret files Added prod.env and dev.env Updated README.txt Updated docker files Updated version to 0.2.0 in setup.py Added workflow thingy to automatically run tests on commit to main

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,13 @@ services:
   web:
     build: .
     ports:
-      - "9001:8000"
+      - "${PORT}:8000"
+    volumes:
+      - ${API_KEYS_FILE}:/app/apikeys.txt
+    environment:
+      - FAST_API_SIMPLE_SECURITY_AUTOMATIC_EXPIRATION=90
+      - FASTAPI_SIMPLE_SECURITY_API_KEY_FILE=/app/apikeys.txt
+      - LOG_LEVEL=${LOG_LEVEL}
+      - ENABLE_SECURITY=${ENABLE_SECURITY}
+    env_file:
+      - ./secrets.env
