--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.gitsecret/keys/random_seed
+!*.secret
+secrets.env
+apikeys.dev.txt
+apikeys.prod.txt
