--- a/.github/workflows/pytest_on_to_main.yml
+++ b/.github/workflows/pytest_on_to_main.yml
@@ -1,12 +1,6 @@
 name: Run tests on push to main
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
