--- a/.github/workflows/pytest_on_to_main.yml
+++ b/.github/workflows/pytest_on_to_main.yml
@@ -24,8 +24,8 @@ jobs:
 
     - name: Run Pytest
       run: |
-        cd dslsplit
-        pytest tests/
+        cd dslsplit/tests/
+        pytest
 
     - name: Check for failures
       run: |
