Fixed another error in workflow - the main branch was always checked out #12

--- a/.github/workflows/pytest_on_to_main.yml
+++ b/.github/workflows/pytest_on_to_main.yml
@@ -1,4 +1,4 @@
-name: Run tests on push to main
+name: Run tests on push to any branch
 
 on: [push]
 jobs:
@@ -9,7 +9,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        ref: main
+        ref: ${{ github.ref }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
